CS - HOTFIX 4 + Crystal Early Work

--- a/planetary_diversity/localisation/english/planetarydiversity_more_arcs_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_more_arcs_l_english.yml
@@ -15,19 +15,19 @@
  pc_pd_hive_superhabitable_arc: "Superhabitable Overmind World"
  pc_pd_hive_superhabitable_arc_desc: "This superhabitable world is a colossal living organism intricately linked to the Hive Mind that created it. It has been sculpted as a bastion of advanced thought processes and is highly defended. Its terrain is poised to assail any unwelcome visitor."
  pc_pd_hive_superhabitable_arc_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_superhabitable_arc_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_superhabitable_arc_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_superhabitable_arc_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_superhabitable_arc_preference_desc: "$trait_pc_hive_preference_desc$"
  pc_pd_hive_tidally_locked_arc: "Tidally Locked Overmind World"
  pc_pd_hive_tidally_locked_arc_desc: "This tidally locked world is a colossal living organism intricately linked to the Hive Mind that created it. It has been sculpted as a bastion of advanced thought processes and is highly defended. Its terrain is poised to assail any unwelcome visitor."
  pc_pd_hive_tidally_locked_arc_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_tidally_locked_arc_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_tidally_locked_arc_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_tidally_locked_arc_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_tidally_locked_arc_preference_desc: "$trait_pc_hive_preference_desc$"
  pc_pd_hive_cave_arc: "Cave Overmind World"
  pc_pd_hive_cave_arc_desc: "This cavernous world is a colossal living organism intricately linked to the Hive Mind that created it. It has been sculpted as a bastion of advanced thought processes and is highly defended. Its terrain is poised to assail any unwelcome visitor."
  pc_pd_hive_cave_arc_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_cave_arc_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_cave_arc_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_cave_arc_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_cave_arc_preference_desc: "$trait_pc_hive_preference_desc$"
 
