--- a/planetary_diversity/localisation/russian/planetarydiversity_engine_events_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_engine_events_l_russian.yml
@@ -1,8 +1,8 @@
 ﻿l_russian:
 
 ###Terraforming Event
- pdengine.21.name: "Terraforming Complete"
- pdengine.21.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this world."
+ pdengine.21.name: "Терраформирование завершено"
+ pdengine.21.desc: "Поскольку терраформирование планеты §Y[From.GetName]§! завершено, нам осталось только выбрать новый биом этого мира."
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -89,15 +89,15 @@
  pdengine.21.lichen: "$pc_pd_lichen$"
 
 ###Gaia Terraforming Event
- pdengine.24.name: "Gaia Terraforming Complete"
- pdengine.24.desc: "As we finish terraforming §Y[Root.GetName]§! we have the opportunity to choose the new biome of this ideal world."
+ pdengine.24.name: "Терраформирование в идеальный мир завершено"
+ pdengine.24.desc: "Поскольку терраформирование планеты §Y[From.GetName]§! завершено, нам осталось только выбрать новый биом этого идеального мира."
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
 
 ###Life Seeded Choice Event
- pdengine.90.name: "$civic_life_seeded$ Biome"
- pdengine.90.desc: "Our people evolved on this paradise of a planet we call §Y[Capital_scope.GetName]§!. What biome is our homeworld?"
+ pdengine.90.name: "$civic_life_seeded$"
+ pdengine.90.desc: "Наш вид эволюционировал в раю, имя которому §Y[Capital_scope.GetName]§!. Но какой же он?"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
@@ -106,14 +106,14 @@
  pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
 
 ###Uncommon Gaia Terraforming Event
- pdengine.96.name: "Gaia Terraforming Complete"
- pdengine.96.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this ideal world."
- pdengine.96.wet_gaia_cave: "Wet Climate"
- pdengine.96.dry_gaia_cave: "Dry Climate"
- pdengine.96.cold_gaia_cave: "Cold Climate"
- pdengine.96.wet_gaia_superhabitable: "Wet Climate"
- pdengine.96.dry_gaia_superhabitable: "Dry Climate"
- pdengine.96.cold_gaia_superhabitable: "Cold Climate"
- pdengine.96.wet_gaia_tidally_locked: "Wet Climate"
- pdengine.96.dry_gaia_tidally_locked: "Dry Climate"
- pdengine.96.cold_gaia_tidally_locked: "Cold Climate"
+ pdengine.96.name: "Терраформирование в идеальный мир завершено"
+ pdengine.96.desc: "Поскольку терраформирование планеты §Y[From.GetName]§! завершено, нам осталось только выбрать новый биом этого идеального мира."
+ pdengine.96.wet_gaia_cave: "Влажный климат"
+ pdengine.96.dry_gaia_cave: "Сухой климат"
+ pdengine.96.cold_gaia_cave: "Морозный климат"
+ pdengine.96.wet_gaia_superhabitable: "Влажный климат"
+ pdengine.96.dry_gaia_superhabitable: "Сухой климат"
+ pdengine.96.cold_gaia_superhabitable: "Морозный климат"
+ pdengine.96.wet_gaia_tidally_locked: "Влажный климат"
+ pdengine.96.dry_gaia_tidally_locked: "Сухой климат"
+ pdengine.96.cold_gaia_tidally_locked: "Морозный климат"
