--- a/planetary_diversity/localisation/russian/planetarydiversity_start_screen_message_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_start_screen_message_l_russian.yml
@@ -1,11 +1,11 @@
 ﻿l_russian:
 
- START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape among the rich jungles and shallow seas of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the lush river valleys [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the rich boreal forests [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape among the shaded forests under the constant sun of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape in the twilight zone of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape on the frozen twilight coast of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the great lush caverns of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the sandstone caves of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the ice filled caverns of [GetHomeWorldName], our civilization has spread and prospered."
+ START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "За века, прошедшие с тех пор, как богатых тропических лесах и на побережьях морей [GetHomeWorldName] сформировались первые примитивные сообщества [GetSpeciesName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "За века, прошедшие с тех пор, как в долинах рек [GetHomeWorldName] сформировались первые примитивные сообщества [GetSpeciesName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "В течение веков, прошедших с тех пор, как первые примитивные сообщества [GetSpeciesName] сформировались в богатых таежных лесах [GetHomeWorldName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "За века, прошедшие с тех пор, как в сумеречной зоне [GetHomeWorldName] сформировались первые примитивные сообщества [GetSpeciesName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "За века, прошедшие с тех пор, как в сумеречной зоне [GetHomeWorldName] сформировались первые примитивные сообщества [GetSpeciesName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "За века, прошедшие с тех пор, как в сумеречной зоне [GetHomeWorldName] сформировались первые примитивные сообщества [GetSpeciesName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_WET_CAVE: "За века, прошедшие с тех пор, как в богатых на растения пещерах [GetHomeWorldName] сформировались первые примитивные сообщества [GetSpeciesName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_DRY_CAVE: "За века, прошедшие с тех пор, как в песчаниковых пещерах [GetHomeWorldName] сформировались первые примитивные сообщества [GetSpeciesName], наша цивилизация распространилась и достигла процветания."
+ START_SCREEN_PART_ONE_COLD_CAVE: "За века, прошедшие с тех пор, как первые примитивные сообщества [GetSpeciesName] сформировались в ледяных пещерах [GetHomeWorldName], наша цивилизация распространилась и достигла процветания."
