--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_more_arcs_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_more_arcs_l_simp_chinese.yml
@@ -10,19 +10,19 @@
  pc_pd_hive_superhabitable_arc: "主脑星球（超级类地）"
  pc_pd_hive_superhabitable_arc_desc: "这整个超级类地星球其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_superhabitable_arc_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_superhabitable_arc_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_superhabitable_arc_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_superhabitable_arc_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_superhabitable_arc_preference_desc: "$trait_pc_hive_preference_desc$"
  pc_pd_hive_tidally_locked_arc: "主脑星球（潮汐锁定）"
  pc_pd_hive_tidally_locked_arc_desc: "这整个潮汐锁定星球其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_tidally_locked_arc_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_tidally_locked_arc_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_tidally_locked_arc_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_tidally_locked_arc_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_tidally_locked_arc_preference_desc: "$trait_pc_hive_preference_desc$"
  pc_pd_hive_cave_arc: "主脑星球（岩洞）"
  pc_pd_hive_cave_arc_desc: "这整个岩洞星球其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_cave_arc_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_cave_arc_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_cave_arc_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_cave_arc_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_cave_arc_preference_desc: "$trait_pc_hive_preference_desc$"
  pc_pd_machine_superhabitable_arc: "枢纽星球（超级类地）"
