--- a/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_l_german.yml
+++ b/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_l_german.yml
@@ -121,7 +121,7 @@ trait_pc_pd_garden_city_preference_desc: "Dummy-Klasse, nicht verwenden."
 pc_pd_hive: "Hive-Overmind-Welt"
 pc_pd_hive_desc: "Diese Welt ist ein kolossaler lebender Organismus, der eng mit dem Schwarmbewusstsein verbunden ist, das ihn erschaffen hat. Sie wurde als Bastion hochentwickelter Denkprozesse gestaltet und ist streng verteidigt. Ihr Terrain ist bereit, jeden ungebetenen Besucher anzugreifen."
 pc_pd_hive_adj: "$pc_hive_adj$"
-mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability"
+mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability$"
 Merkmal_pc_pd_hive_preference: "$trait_pc_hive_preference$"
 trait_pc_pd_hive_preference_desc: "$trait_pc_hive_preference_desc$"
 pc_pd_machine: "Maschinen-Nexus-Welt"
@@ -149,7 +149,7 @@ district_pd_gestalt_administrative_desc: "Koordinationsbezirke"
 district_pd_gestalt_administrative_plural: "Ein synaptischer Nexus, der die psionischen Verbindungen des Bienenstocks verstärkt und seinen Willen und seine Führung über den Kosmos ausdehnt."
 district_pd_nexus: "$district_nexus$"
 district_pd_nexus_desc: "$district_nexus_desc$"
-district_pd_nexus_plural: "$district_nexus_plural"
+district_pd_nexus_plural: "$district_nexus_plural$"
 
 #Modifikatoren
 pd_hive_military: "Overmind-Welt"
