--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -83,7 +83,7 @@
  pc_pd_hive: "蜂巢主脑星球"
  pc_pd_hive_desc: "这整个世界其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_preference_desc: "$trait_pc_hive_preference_desc$"
  pc_pd_machine: "机械枢纽星球"
@@ -109,7 +109,7 @@
  district_pd_gestalt_administrative_plural: "用于放大蜂巢的灵能链接的突触枢纽，向宇宙延伸蜂群的意志和指引。"
  district_pd_nexus: "$district_nexus$"
  district_pd_nexus_desc: "$district_nexus_desc$"
- district_pd_nexus_plural: "$district_nexus_plural"
+ district_pd_nexus_plural: "$district_nexus_plural$"
  pd_hive_military: "主脑星球"
  pd_hive_military_desc: "这个星球对蜂群思维的核心机能至关重要，因而加强了对外部威胁与干涉的防御。强大的护盾包裹着整个星球，作战子个体随时待命，确保星球卫戍。"
  pd_machine_military: "枢纽星球"
@@ -141,6 +141,6 @@
  trait_pc_pd_garden_city_preference_desc: "Dummy-Class, do not use."
 
 ###Tooltips
-decision_pd_garden_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
-decision_pd_commerical_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$—§Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
-decision_pd_miltary_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
+ decision_pd_garden_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
+ decision_pd_commerical_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$—§Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
+ decision_pd_miltary_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
