--- a/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_necro_l_braz_por.yml
+++ b/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_necro_l_braz_por.yml
@@ -3,10 +3,10 @@
 ###Necro Planets
 #Dummy Classes
  pc_pd_necro: "$DO_NOT_USE$"
- pc_pd_necro_desc: "$DO_NOT_USE"
- pc_pd_necro_adj: "$DO_NOT_USE"
- mod_pc_pd_necro_habitability: "$DO_NOT_USE"
- trait_pc_pd_necro_preference: "$DO_NOT_USE"
+ pc_pd_necro_desc: "$DO_NOT_USE$"
+ pc_pd_necro_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_preference: "$DO_NOT_USE$"
  trait_pc_pd_necro_preference_desc: "$DO_NOT_USE"
  pc_pd_necro_city: "$DO_NOT_USE$"
  pc_pd_necro_city_desc: "$DO_NOT_USE$"
@@ -87,7 +87,7 @@
  pd_necro_ray.02.name: "Planet Necromancy"
  pd_necro_ray.02.desc: "As the column of nanobots descending from the [FromFrom.GetName] dissipates, the surface of [From.GetName] is wholly transformed. Now there is only a Necropolis."
  pd_necro_ray.02.tooltip: "The planet becomes an §Y$pd_aw_necro_planet$§!.\nAll Robot Pops will be destoryed and biological pops will gain the §Y$trait_zombie$§!."
- is_not_necro: "§R$TRIGGER_FAIL$Target is already an §Y$pd_aw_necro_planet$§!§!"
+ is_not_necro: "§R$TRIGGER_FAIL$Target is already a §Y$pd_aw_necro_planet$§!§!"
  will_purge_robots_and_zombie: "§RRobotic Pops will be destroyed and biological pops will gain the §Y$trait_zombie$§!§!"
  opinion_pd_necro_a_world: "Necromanced a World"
  opinion_pd_necro_my_world: "Necromanced our World"
