--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_flooded_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_flooded_l_russian.yml
@@ -1,31 +1,31 @@
 ﻿l_russian:
 
 #Flooded/Aquatic Planets
- decision_pd_aw_flood_planet: "Expand Planetary Sea"
- decision_pd_aw_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
- flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
- decision_pd_aw_unflood_planet: "Unflood Planet"
- decision_pd_aw_unflood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By lowering sea levels and moving cities to islands, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_ringworld: "Flood Ringworld"
- decision_pd_aw_flood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_unflood_ringworld: "Unflood Ringworld"
- decision_pd_aw_unflood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By lowering sea levels and moving cities back to land, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_unflood_habitat: "Unflood Habitat"
- decision_pd_aw_unflood_habitat_desc: "This habitat has the potential to be an ideal home for our people. By draining this habitat, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_habitat_tooltip: "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
+ decision_pd_aw_flood_planet: "Расширить планетарное море"
+ decision_pd_aw_flood_planet_desc: "Этот океанический мир прекрасен, но он может стать для нас идеальным. Углубив океаны и переместив города под воду, мы сможем расширить пригодные для жизни области."
+ decision_pd_aw_flood_planet_tooltip: "Лёд будет добываться в системах, космические базы которых обладают модулем §Y$sm_ice_mining_station$§!\nБудет добавлен модификатор §Y$pd_aw_flooded_planet$§!:\n$pd_aw_flooded_planet_tooltip$"
+ flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\nПригодность для §Yне-аквоидов§!: §R-20%§!"
+ decision_pd_aw_unflood_planet: "Осушить планету"
+ decision_pd_aw_unflood_planet_desc: "Этот океанический мир прекрасен, но он может стать для нас идеальным. Снизив уровень моря и переместив города на острова, мы сможем расширить пригодные для жизни области."
+ decision_pd_aw_flood_ringworld: "Затопить мир-кольцо"
+ decision_pd_aw_flood_ringworld_desc: "Этот мир-кольцо прекрасен, но он может стать для нас идеальным. Углубив моря и переместив города под воду, мы сможем расширить пригодные для жизни области."
+ decision_pd_aw_unflood_ringworld: "Осушить мир-кольцо"
+ decision_pd_aw_unflood_ringworld_desc: "Этот мир-кольцо прекрасен, но он может стать для нас идеальным. Снизив уровень моря и переместив города на сушу, мы сможем расширить пригодные для жизни области."
+ decision_pd_aw_unflood_habitat: "Осушить среду обитания"
+ decision_pd_aw_unflood_habitat_desc: "Эта среда обитания прекрасна, но может стать для нас идеальной. Если мы её осушим, она прекрасно подойдёт для сухопутных видов."
+ decision_pd_aw_flood_habitat_tooltip: "Пригодность: §R-20%§!\nСоответствует §Yокеаническому§! миру для §Yаквоидов§!.\nЛёд будет добываться в системе, космическая база которой обладает модулем §Y$sm_ice_mining_station$§!."
 
- flooded_habitat: "Flooded"
- flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
- pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
+ flooded_habitat: "Затоплено"
+ flooded_habitat_desc: "Залитая водой, эта среда обитания идеально подходит для аквоидов."
+ pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\nПригодность для §Yне-аквоидов§!: §R-20%§!"
 
- pd_aw_flooded_planet: "Flooded World"
- pd_aw_flooded_planet_desc: "This oceanic planet is an ideal home for aquatic species. Life flourishes for those adapted to live beneath the waves."
- pd_aw_flooded_habitat: "Flooded Habitat"
- pd_aw_flooded_habitat_desc: "This habitat has been flooded with water, imitating the natural environment of Aquatic creatures."
+ pd_aw_flooded_planet: "Затопленный мир"
+ pd_aw_flooded_planet_desc: "Эта океаническая планета идеально подходит для аквоидов или прочих приспособленных для жизни под водой."
+ pd_aw_flooded_habitat: "Затопленная среда обитания"
+ pd_aw_flooded_habitat_desc: "Залитая водой, эта среда обитания идеально подходит для аквоидов."
 
- ICE_MINING_PLANET_SUCCESS_TITLE: "Planet Flooded"
- ICE_MINING_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+ ICE_MINING_PLANET_SUCCESS_TITLE: "Затопление планеты завершено"
+ ICE_MINING_PLANET_SUCCESS_DESC: "Благодаря добыче льда в системе $SYSTEM|Y$ нам удалось затопить поверхность §Y[This.GetName]§!."
 
  ocean_paradise_2: "$ocean_paradise$"
  ocean_paradise_2_desc: "$ocean_paradise_desc$"
