--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_lithoid_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_lithoid_l_russian.yml
@@ -1,48 +1,48 @@
 ﻿l_russian:
 ###Lithoid Planets
 #Decision
- decision_pd_aw_lithoid_planet: "Create Lithotrophic Ecosystem"
- decision_pd_aw_lithoid_planet_desc: "This world waits to be etched into one of crystal and stone. The feeble biological ecosystem sits in our way."
- decision_pd_aw_lithoid_planet_effects_short: "A lithotrophic ecosystem will be chiseled on this world, enabling us to finely tune the crystalline frequencies to better suit our needs."
- decision_pd_aw_lithoid_planet_tooltip: "Once complete, we will be able to choose the frequency of this planet's lithotrophic crystals."
- decision_pd_aw_lithoid_planet_cleanup: "Restore Biological Ecosystem"
- decision_pd_aw_lithoid_planet_cleanup_desc: "We must restore this planet's biological ecosystem to its original glory."
- decision_pd_aw_lithoid_planet_cleanup_effects_short: "The artificially created lithotrophic ecosystem will be removed, restoring it to a biological nature."
- decision_pd_aw_lithoid_planet_cleanup_tooltip: "All Lithotrophic Modifiers will be removed, and the planet will be returned to a biological ecosystem."
- decision_pd_aw_lithoid_change_frequency: "Change Lithotrophic Frequency"
- decision_pd_aw_lithoid_change_frequency_desc: "We will change the frequency of the lithotrophic ecosystem crystals to better suit our needs."
- decision_pd_aw_lithoid_change_frequency_effects_short: "We can change the frequency of this planet's crystals."
- decision_pd_aw_lithoid_change_frequency_tooltip: "The current Lithotrophic modifier will be removed, allowing us to change it to a different frequency."
+ decision_pd_aw_lithoid_planet: "Создать литоидную экосистему"
+ decision_pd_aw_lithoid_planet_desc: "Этот мир ждет, чтобы его высекли из хрусталя и камня. Слабая биологическая экосистема стоит на нашем пути."
+ decision_pd_aw_lithoid_planet_effects_short: "На планете будет создана литоидная экосистема, что позволит нам тонко настраивать кристаллические частоты и улучшить мир для наших нужд."
+ decision_pd_aw_lithoid_planet_tooltip: "По завершении проекта мы сможем выбрать частоту кристального резонанса на планете."
+ decision_pd_aw_lithoid_planet_cleanup: "Восстановить биологическую экосистему"
+ decision_pd_aw_lithoid_planet_cleanup_desc: "Мы должны вернуть экосистеме нашей планеты её первоначальное великолепие."
+ decision_pd_aw_lithoid_planet_cleanup_effects_short: "Искусственная литоидная экосистема будет удалена, а биологическая восстановлена."
+ decision_pd_aw_lithoid_planet_cleanup_tooltip: "Все литоидные модификаторы будут удалены, а планета вернётся к исходной биологической экосистеме."
+ decision_pd_aw_lithoid_change_frequency: "Изменить литоидную частоту"
+ decision_pd_aw_lithoid_change_frequency_desc: "Мы изменим частоту кристаллов нашей литоидной экосистемы под новые нужды."
+ decision_pd_aw_lithoid_change_frequency_effects_short: "Мы можем изменить частоту кристаллов экосистемы под другие нужды."
+ decision_pd_aw_lithoid_change_frequency_tooltip: "Текущий модификатор частоты будет удалён, а нам станет доступен выбор другого."
 
 #Modifiers
- pd_aw_lithoid_planet_cyan: "Lithotrophic World"
- pd_aw_lithoid_planet_cyan_desc: "Frequency: 500 nm\nThe resonating vibrations foster goodwill and catalyze an accelerated growth rate for Lithoids."
- pd_aw_lithoid_planet_red: "Lithotrophic World"
- pd_aw_lithoid_planet_red_desc: "Frequency: 650 nm\nThe robust crystalline resonance synergizes seamlessly with mineral deposits, rendering them more accessible for extraction."
- pd_aw_lithoid_planet_yellow: "Lithotrophic World"
- pd_aw_lithoid_planet_yellow_desc: "Frequency: 580 nm\nThe dynamic harmonics of this crystalline resonance seamlessly integrate with our power networks, unlocking their total capacity."
+ pd_aw_lithoid_planet_cyan: "Литоидный мир"
+ pd_aw_lithoid_planet_cyan_desc: "Частота: 500 нм\nРезонансные вибрации способствуют развитию и ускоряют темпы роста литоидов."
+ pd_aw_lithoid_planet_red: "Литоидный мир"
+ pd_aw_lithoid_planet_red_desc: "Частота: 650 нм\nСильный кристаллический резонанс прекрасно синергирует с частотой минеральных отложений, облегчая их добычу."
+ pd_aw_lithoid_planet_yellow: "Литоидный мир"
+ pd_aw_lithoid_planet_yellow_desc: "Частота: 580 нм\nДинамические гармоники этого кристаллического резонанса легко сочетаются с нашими энергосетями, раскрывая их полную мощность."
 
 #Acension Perk
- ap_pd_lithoid_worlds: "Lithotrophic Worlds"
- ap_pd_lithoid_worlds_desc: "We will sculpt our worlds into unyielding lithotrophic paradises, forging a bedrock of eternal stability."
- allow_lithoid_worlds: "§HUnlocks Decision:§! $decision_pd_aw_lithoid_planet$"
- describe_lithoid_worlds: "§YLithotrophic Worlds§! are a special planet class with lithotrophic based ecosystems, which allows for frequency tuning of large crystal structure which can improve $i_unity$, $i_minerals$ or $i_energy$.\n$MOD_LITHOID_POP_HAPPINESS$: §G25%§!\n$mod_LITHOID_pop_growth_speed$: §G25%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §R-50%§!"
+ ap_pd_lithoid_worlds: "Литоидные миры"
+ ap_pd_lithoid_worlds_desc: "Мы превратим каждый наш мир в незыблемый литоидный рай, создадим фундамент для вечной стабильности."
+ allow_lithoid_worlds: "§HРазблокирует решение:§! $decision_pd_aw_lithoid_planet$"
+ describe_lithoid_worlds: "§YЛитоидные миры§! - это особый класс планет с литоидной экосистемой, на которых доступна настройка частоты кристаллов, увеличивающих получаемое £unity£ §Iединство§!, производство £minerals£ §Iминералов§! или £energy£ §Iэнергии§!.\n$MOD_LITHOID_POP_HAPPINESS$: §G+25%§!\n$mod_LITHOID_pop_growth_speed$: §G+20%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §R-50%§!"
 
 #Notification Message
- MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ is now a §YLithotrophic World§!"
- MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Complete"
- MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "The biological biome on $PLANET|Y$ as been restored."
- MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Removed"
+ MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ преобразована в §Yлитоидный мир§!"
+ MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "Создание литоидной экосистемы завершено"
+ MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "Биологическая экосистема на планете $PLANET|Y$ восстановлена."
+ MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "Литоидная экосистема удалена"
 
 #Choose Event
- pdawlithoidplanets.100.name: "Crystalline Frequency"
- pdawlithoidplanets.100.desc: "What resonant frequency shall we attune the lithotrophic biome on §Y[This.GetName]§!?"
- pdawlithoidplanets.100.cyan: "Cyan"
- pdawlithoidplanets.100.cyan.tooltip: "This resonating frequency acts as a cohesive force, fostering unity among our lithoid populace and nurturing a harmonious surge in population growth."
- pdawlithoidplanets.100.red: "Red"
- pdawlithoidplanets.100.red.tooltip: "This resonance synergizes seamlessly with mineral deposits, rendering them more accessible and ripe for extraction.""
- pdawlithoidplanets.100.yellow: "Yellow"
- pdawlithoidplanets.100.yellow.tooltip: "This resonating frequency seamlessly integrates with our power networks, unlocking a surge in their total capacity."
+ pdawlithoidplanets.100.name: "Частота резонанса кристаллов"
+ pdawlithoidplanets.100.desc: "Какую частоту резонанса нам следует установить для местной экосистем на §Y[This.GetName]§!?"
+ pdawlithoidplanets.100.cyan: "Голубой (500 нм)"
+ pdawlithoidplanets.100.cyan.tooltip: "Эта частота резонанса действует как объединяющая сила, способствуя единству литоидных поселений их гармоничному приросту."
+ pdawlithoidplanets.100.red: "Красный (650 нм)"
+ pdawlithoidplanets.100.red.tooltip: "Эта частота резонанса прекрасно синергирует с минеральными отложениями, облегчая к ним доступ и их добычу."
+ pdawlithoidplanets.100.yellow: "Жёлтый (580 нм)"
+ pdawlithoidplanets.100.yellow.tooltip: "Эта частота резонанса органично сочетается с нашими электросетями, повышая их общую мощность."
 
 #Dummy Classes
  pc_pd_lithoid_cyan: "$DO_NOT_USE$"
