--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_necro_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_necro_l_russian.yml
@@ -3,11 +3,11 @@
 ###Necro Planets
 #Dummy Classes
  pc_pd_necro: "$DO_NOT_USE$"
- pc_pd_necro_desc: "$DO_NOT_USE"
- pc_pd_necro_adj: "$DO_NOT_USE"
- mod_pc_pd_necro_habitability: "$DO_NOT_USE"
- trait_pc_pd_necro_preference: "$DO_NOT_USE"
- trait_pc_pd_necro_preference_desc: "$DO_NOT_USE"
+ pc_pd_necro_desc: "$DO_NOT_USE$"
+ pc_pd_necro_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_preference: "$DO_NOT_USE$"
+ trait_pc_pd_necro_preference_desc: "$DO_NOT_USE$"
  pc_pd_necro_city: "$DO_NOT_USE$"
  pc_pd_necro_city_desc: "$DO_NOT_USE$"
  pc_pd_necro_city_adj: "$DO_NOT_USE$"
@@ -40,56 +40,56 @@
  trait_pc_pd_necro_shroud_relic_preference_desc: "$DO_NOT_USE$"
 
 #Decision
- decision_pd_aw_necro_planet: "Build Planetary Necropolis"
- decision_pd_aw_necro_planet_desc: "This world yearns to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- decision_pd_aw_necro_planet_effects_short: "§Y$district_pd_aw_necro$§! modifier added.\nConstruction of §Y$district_farming_plural$§! replaced with §G$district_pd_aw_necro_plural$§!"
- decision_pd_aw_necro_planet_cleanup: "Remove Planetary Necropolis"
- decision_pd_aw_necro_planet_cleanup_desc: "We must remove the temples and tombs left behind by this planet's previous owners."
- decision_pd_aw_necro_planet_cleanup_effects_short: "§Y$pd_aw_necro_planet$§! modifier will be removed."
+ decision_pd_aw_necro_planet: "Построить Некрополь"
+ decision_pd_aw_necro_planet_desc: "Этот мир жаждет стать просторным храмом, в котором будет звучать шепот нашего наследия, во веки веков."
+ decision_pd_aw_necro_planet_effects_short: "Планета получит модификатор §Y$district_pd_aw_necro$§!.\nВместо возведения §Yсельскохозяйственных§! районов станет доступно строительство §Gрайонов Некрополя§!."
+ decision_pd_aw_necro_planet_cleanup: "Снести Некрополь"
+ decision_pd_aw_necro_planet_cleanup_desc: "Мы должны убрать храмы и гробницы, оставленные прежними хозяевами этой планеты."
+ decision_pd_aw_necro_planet_cleanup_effects_short: "Модификатор §Y$pd_aw_necro_planet$§! будет удалён."
 
 #Modifiers
- pd_aw_necro_planet: "Necropolis"
- pd_aw_necro_planet_tooltip: "§GUnlocks Construction§!: £district£ $district_pd_aw_necro_plural$\n§RBlocks Construction§!: £district£ $district_farming_plural$\n£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_aw_necro_planet_desc: "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+ pd_aw_necro_planet: "Некрополь"
+ pd_aw_necro_planet_tooltip: "§GОткрывает§!: £district£ $district_pd_aw_necro_plural$\n§RБлокирует§!: £district£ $district_farming_plural$\n£unity£ $unity$ от [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$: §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ на §R10%§!"
+ pd_aw_necro_planet_desc: "Этот мир жаждет стать просторным храмом, в котором будет звучать шепот нашего наследия, во веки веков."
  pd_aw_necro_city_planet: "$pd_aw_necro_planet$"
  pd_aw_necro_city_planet_desc: "$pd_aw_necro_planet_desc$"
- pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_necro_planet: "Necropolis"
- pd_necro_planet_tooltip: "§GUnlocks Construction§!: £district£ $district_pd_aw_necro_plural$\n§RBlocks Construction§!: £district£ $district_farming_plural$\n£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_necro_planet_desc: "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+ pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ от [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$: §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ на §R10%§!"
+ pd_necro_planet: "Некрополь"
+ pd_necro_planet_tooltip: "§GОткрывает!: £district£ $district_pd_aw_necro_plural$\n§RБлокирует§!: £district£ $district_farming_plural$\n£unity£ $unity$ от [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$: §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ на §R10%§!"
+ pd_necro_planet_desc: "Этот мир - один большой храм. Здесь звучит шёпот нашего наследия, во веки веков."
 
 #Acension Perk
- ap_pd_necro_worlds: "Necro Worlds"
- ap_pd_necro_worlds_desc: "Our world yearn to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- allow_necro_worlds: "§HUnlocks Decision:§! $decision_pd_aw_necro_planet$"
- describe_necro_worlds: "Non-Urban Planets\n$t$- Unlocks Construction: £district£ ['district:district_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_farming']\nRingworlds\n$t$- Unlocks Construction: £district£ ['district:district_rw_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_rw_farming']\n\nUnlocks the §YPlanet Necrosis Beam§! Colossus Weapon §R(requires §Y$ap_colossus$§! Ascension Perk)§!."
+ ap_pd_necro_worlds: "Некро-миры"
+ ap_pd_necro_worlds_desc: "Наш мир жаждет стать просторным храмом, в котором будет звучать шепот нашего наследия, во веки веков."
+ allow_necro_worlds: "§HРешение:§! $decision_pd_aw_necro_planet$"
+ describe_necro_worlds: "Не экуменополисы\n$t$- Открывает: £district£ ['district:district_pd_aw_necro']\n$t$- Блокирует: £district£ ['district:district_farming']\nМиры-кольца\n$t$- Открывает: £district£ ['district:district_rw_pd_aw_necro']\n$t$- Блокирует: £district£ ['district:district_rw_farming']\n\nОткрывает оружие колосса: §YНекро-луч§! §R(требуется бонус за стремление §Y$ap_colossus$§!)§!."
 
 #Necropolis District
- district_pd_aw_necro: "Necropolis District"
- district_pd_aw_necro_plural: "Necropolis Districts"
- district_pd_aw_necro_desc: "A testament to our legacy, these spires hold the key to our eternal significance."
- district_rw_pd_aw_necro: "Necropolis Segment"
- district_rw_pd_aw_necro_desc: "A testament to our legacy, endless spires stretch across this Ring World section. They hold the key to our eternal significance."
- district_rw_pd_aw_necro_plural: "Necropolis Segments"
+ district_pd_aw_necro: "Район Некрополя"
+ district_pd_aw_necro_plural: "Районы Некрополя"
+ district_pd_aw_necro_desc: "Будучи свидетельством нашего наследия, эти шпили хранят ключ к нашему прошлому, во веки веков."
+ district_rw_pd_aw_necro: "Сегмент Некрополя"
+ district_rw_pd_aw_necro_desc: "Будучи свидетельством нашего наследия, эти шпили протянулись по всей секции мира-кольца. Они хранят ключ к нашему прошлому, во веки веков."
+ district_rw_pd_aw_necro_plural: "Сегменты Некрополя"
 
 #Notification Message
- MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ is now a §Y$pd_aw_necro_planet$§!"
- MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Planetary Necropolis Complete"
- MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "The planetary Necropolis on $PLANET|Y$ as been removed."
- MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Necropolis Removed"
+ MESSAGE_PD_AW_NECRO_DESC:1 "Планета $PLANET|Y$ превращена в §Y$pd_aw_necro_planet$§!"
+ MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Некрополь завершён"
+ MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "Некрополь на планете $PLANET|Y$ удалён."
+ MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Снос Некрополя завершён"
 
 #Necro Planet Cracker
- PLANET_KILLER_PD_NECRO_RAY: "Planet Necrosis Beam"
- PLANET_KILLER_PD_NECRO_RAY_DESC: "A spectral tide of nanobots shall cascade upon this world, obliterating robotics and silencing any higher functions of the living. In its wake, a Necropolis shall rise across the landscape."
- PLANET_KILLER_PD_NECRO_RAY_ACTION: "Necromance"
- FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY: "Preparing to necromance $PLANET|Y$"
- MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "was subjected to a necrotic transformation by"
- pd_necro_ray.02.name: "Planet Necromancy"
- pd_necro_ray.02.desc: "As the column of nanobots descending from the [FromFrom.GetName] dissipates, the surface of [From.GetName] is wholly transformed. Now there is only a Necropolis."
- pd_necro_ray.02.tooltip: "The planet becomes an §Y$pd_aw_necro_planet$§!.\nAll Robot Pops will be destoryed and biological pops will gain the §Y$trait_zombie$§!."
- is_not_necro: "§R$TRIGGER_FAIL$Target is already an §Y$pd_aw_necro_planet$§!§!"
- will_purge_robots_and_zombie: "§RRobotic Pops will be destroyed and biological pops will gain the §Y$trait_zombie$§!§!"
- opinion_pd_necro_a_world: "Necromanced a World"
- opinion_pd_necro_my_world: "Necromanced our World"
- opinion_pd_necro_a_primitive_world: "Necromanced a Primitive World"
+ PLANET_KILLER_PD_NECRO_RAY: "Некро-луч"
+ PLANET_KILLER_PD_NECRO_RAY_DESC: "Большое количество некроботов низвергается на планету, уничтожая все искусственные структуры и роботов и превращая всю биологическую разумную жизнь в зомби. Планета будет превращена в некро-мир."
+ PLANET_KILLER_PD_NECRO_RAY_ACTION: "Некроформинг"
+ FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY: "Подготовка к некроформингу планеты $PLANET|Y$"
+ MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "подверглась некроформингу лучом"
+ pd_necro_ray.02.name: "Планетарный некроформинг"
+ pd_necro_ray.02.desc: "Когда колонна некроботов, испускаемая [FromFrom.GetName], рассеивается, поверхность [From.GetName] полностью преображается. Теперь это сплошной некро-мир."
+ pd_necro_ray.02.tooltip: "Тип планеты изменится на §Y$pc_pd_necro$§!.\nВсе поселения роботов вымрут, а популяции органиков получат черту §Y$trait_zombie$§!."
+ is_not_necro: "§R$TRIGGER_FAIL$Цель уже является §Yнекро-миром§!§!"
+ will_purge_robots_and_zombie: "§RПоселения роботов вымрут, а популяции органиков получат черту §Y$trait_zombie$§!§!"
+ opinion_pd_necro_a_world: "Завершили некроформинг мира"
+ opinion_pd_necro_my_world: "Завершили некроформинг нашего мира"
+ opinion_pd_necro_a_primitive_world: "Завершили некроформинг примитивного мира"
  opinion_pd_necro_a_primitive_world_phile: "$opinion_cracked_a_primitive_world_phile$"
