--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_shroud_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_shroud_l_russian.yml
@@ -2,29 +2,29 @@
 
 ###Shroud Planets
 #AP
- ap_pd_shroud_worlds: "Unregulated Industrialism"
- ap_pd_shroud_worlds_desc: "The barriers between the mortal realm and the Shroud are thinner than expected. Concentrating our psionic energy, we can further weaken these barriers and create worlds that span both dimensions."
- allow_shroud_worlds: "§YUnlocks Decision:§! $decision_pd_aw_shroud_planet$ on non-ideal planets"
- describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! modifier:\n$t$- "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§"
+ ap_pd_shroud_worlds: "Фазирование Покрова"
+ ap_pd_shroud_worlds_desc: "Завеса между материальным миром и Покровом куда слабее, чем кажется. Сконцентрировав достаточно псионических сил в одном месте, мы сможем ослабить существующие барьеры и создать миры, подвластные обоим измерениям."
+ allow_shroud_worlds: "§YРешение:§! $decision_pd_aw_shroud_planet$ не-идеальных планет"
+ describe_shroud_worlds: "Модификатор §Y$decision_pd_aw_shroud_planet$§!:\n$t$- "Поселения £pop£ §Gпсиоников§!:\n- $mod_planet_psionic_jobs_produces_mult$: §G+10%§!\n- $MOD_POP_HAPPINESS$: §G+10%§!\n\nПоселения £pop£ §Yне-псиоников§!:\n- £mod_pop_environment_tolerance£ §YПригодность§! планеты: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§"
 
 #Decisions
- decision_pd_aw_shroud_planet: "Shroud Phasing"
- decision_pd_aw_shroud_planet_desc: "We can weaken the barrier between this planet and the Shroud and create a balance between the material and psionic realms."
- decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reduces £pop£ §YNon-Psionic Pop Output§!."
- decision_pd_aw_shroud_planet_cleanup: "Phase-Lock Planet"
- decision_pd_aw_shroud_planet_cleanup_desc: "Our physicists can strengthen the barrier between this planet and the Shroud, locking it in the material realm."
- decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWe will remove the psionic influence from this planet."
+ decision_pd_aw_shroud_planet: "Фазовая разблокировка завесы"
+ decision_pd_aw_shroud_planet_desc: "Ослабив завесу между планетой и Покровом, мы сможем создать баланс материального и нематериального."
+ decision_pd_aw_shroud_planet_effects_short: "Планета получит модификатор §Y$pd_aw_shroud_planet$§!.\n\nЭто повысит производительность £pop£ §Gпсиоников§!, но снизит у £pop£ §Yне-псиоников§!."
+ decision_pd_aw_shroud_planet_cleanup: "Фазовая блокировка завесы"
+ decision_pd_aw_shroud_planet_cleanup_desc: "Укрепив завесу между планетой и Покровом, наши физики смогут зафиксировать её в материальном мире."
+ decision_pd_aw_shroud_planet_cleanup_tooltip: "\nМы можем убрать влияние Покрова на эту планету."
 
 #Modifiers
- pd_aw_shroud_planet: "Shroud Touched"
- pd_aw_shroud_planet_desc: "In this place, the deliberately weakened barrier between the material realm and the Shroud has enabled individuals with psychic abilities to reshape reality to a certain extent. However, for those without such gifts, the line between nightmare and reality blurs, giving rise to an endless tapestry of suffering and torment."
- pd_aw_shroud_planet_tooltip: "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§!"
+ pd_aw_shroud_planet: "Прикосновение Покрова"
+ pd_aw_shroud_planet_desc: "В этом месте завеса между Покровом и материальным миром гораздо слабее, что позволяет одарённым псионическими силами гораздо сильнее влиять на реальность. Однако для тех, кто не наделен такими способностями, грань между кошмаром и реальностью стирается, порождая бесконечную череду страданий и мучений."
+ pd_aw_shroud_planet_tooltip: "Поселения £pop£ §Gпсиоников§!:\n- $mod_planet_psionic_jobs_produces_mult$: §G+10%§!\n- $MOD_POP_HAPPINESS$: §G+10%§!\n\nПоселения £pop£ §Yне-псиоников§!:\n- £mod_pop_environment_tolerance£ §YПригодность§! планеты: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§!"
  pd_shroud_planet: "$pd_aw_shroud_planet$"
  pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
  pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
 
 #Notification Message
- MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§!"
- MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Planetary Shroud Communion Complete"
- MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been removed on $PLANET|Y$."
- MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Planet Unshrouded"
+ MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ теперь благословлена §YПрикосновением Покрова§!"
+ MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Ослабление завесы с Покровом завершено"
+ MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "Покров больше не властен над планетой $PLANET|Y$."
+ MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Усиление завесы с Покровом завершено"
