--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_superprojects_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_superprojects_l_russian.yml
@@ -1,74 +1,74 @@
 ﻿l_russian:
 #Planetary Superprojects
  #Notification
- MESSAGE_PD_AW_SUPERPROJECT_DESC: "The superproject on $PLANET|Y$ is complete."
- MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Planetary Superproject Complete"
+ MESSAGE_PD_AW_SUPERPROJECT_DESC: "Суперпроект на планете $PLANET|Y$ завершён."
+ MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Планетарный суперпроект завершён"
 
 #Core Tap
  #Planet Class
- pc_pd_core_tap: "Core Tap"
- pc_pd_core_tap_desc: "This rocky world now hosts a vast network of machines burrowing into its core to extract primal energy, a testament to engineering prowess that has destroyed the planet's original ecosystem."
- pc_pd_core_tap_adj: "energetic"
- mod_pc_pd_core_tap_habitability: "Core Tap Habitability"
- trait_pc_pd_core_tap_preference: "Core Tap Prefernce"
+ pc_pd_core_tap: "Мир вскрытого ядра"
+ pc_pd_core_tap_desc: "Каменистый мир, когда-то подвергшийся мощному техническому воздействию по вскрытию ядра ради возможности эффективного сбора геотермальной энергии. Экосистема, существовавшая здесь ранее, была необратимо уничтожена в процессе."
+ pc_pd_core_tap_adj: "энергетический"
+ mod_pc_pd_core_tap_habitability: "Приспособленность к мирам вскрытого ядра"
+ trait_pc_pd_core_tap_preference: "Предпочтение миров вскрытого ядра"
  trait_pc_pd_core_tap_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_core_tap: "Planetary Superproject: Core Tap"
- decision_pd_aw_core_tap_desc: "By creating a network of machines that burrow into the very core of this world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- decision_pd_megacoretap_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_generator_plural$§!"
+ decision_pd_aw_core_tap: "Суперпроект: Вскрытие ядра"
+ decision_pd_aw_core_tap_desc: "Создав сеть буровых машин, которые достигнут ядра планеты, мы сможем извлекать невероятное количество энергии ценой уничтожения экосистемы."
+ decision_pd_megacoretap_requirements: "£trigger_no£ §RНа планете не должно быть никаких районов, кроме§! §Yэнергетических§!"
 
  #Modifier
- pd_aw_core_tap: "Core Tap"
- pd_aw_core_tap_desc: "This world boasts a vast network of machines burrowing into its core to extract primal energy, but destorying the orignal ecosystem in the process."
+ pd_aw_core_tap: "Вскрытое ядро"
+ pd_aw_core_tap_desc: "На этой планете построена сеть машин, пробурившихся до её ядра, что позволяет извлекать невероятное количество геотермальной энергии. Экосистема, существовавшая здесь ранее, была необратимо уничтожена в процессе."
 
  #Technology
- tech_pd_planetary_core_tap: "Planetary Superproject: Core Tap"
- tech_pd_planetary_core_tap_desc: "By creating a network of machines that burrow into the very core of a world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- tech_pd_planetary_core_tap_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_core_tap$"
+ tech_pd_planetary_core_tap: "Суперпроект: Вскрытие ядра"
+ tech_pd_planetary_core_tap_desc: "Создание сети буровых машин, которые могут достичь ядра планеты, позолит извлекать невероятное количество энергии ценой уничтожения экосистемы."
+ tech_pd_planetary_core_tap_tooltip: "§HРешение:§! $decision_pd_aw_core_tap$"
 
 #Agriworld
  #Planet Class
- pc_pd_agriworld: "Agriworld"
- pc_pd_agriworld_desc: "This rocky planet brims with endless industrial farming heavily relying on potent fertilizers, complex weather control, and advanced irrigation systems. While it sustains an unceasing bounty, it has replaced the planet's natural ecosystem."
- pc_pd_agriworld_adj: "agarian"
- mod_pc_pd_agriworld_habitability: "Agriworld Habitability"
- trait_pc_pd_agriworld_preference: "Agriworld Prefernce"
+ pc_pd_agriworld: "Агромир"
+ pc_pd_agriworld_desc: "На этой каменистой планете ведется интенсивное сельское хозяйство с использованием мощных удобрений, сложной системы управления погодой и передовых ирригационных систем. Естественную экосистему давно заменило невероятное разнообразие искусственных культур."
+ pc_pd_agriworld_adj: "аграрный"
+ mod_pc_pd_agriworld_habitability: "Приспособленность к агромирам"
+ trait_pc_pd_agriworld_preference: "Предпочтение агромиров"
  trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_agriworld: "Planetary Superproject: Agriworld"
- decision_pd_aw_agriworld_desc: "By transforming this planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- decision_pd_agriworld_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_farming_plural$§!"
+ decision_pd_aw_agriworld: "Суперпроект: Агромир"
+ decision_pd_aw_agriworld_desc: "Преобразовав эту планету в агромир, мы сможем организовать сельское хозяйство в промышленных масштабах. Естественная экосистема будет заменена искусственными культурами."
+ decision_pd_agriworld_requirements: "£trigger_no£ §RНа планете не должно быть никаких районов, кроме§! §Yсельскохозяйственных§!"
 
  #Modifier
- pd_aw_agriworld: "Agriworld"
- pd_aw_agriworld_desc: "This world boasts industrial farming that heavily relies on potent fertilizers, complex weather control, and advanced irrigation systems."
+ pd_aw_agriworld: "Агромир"
+ pd_aw_agriworld_desc: "На этой планете ведется интенсивное сельское хозяйство с использованием мощных удобрений, сложной системы управления погодой и передовых ирригационных систем."
 
  #Technology
- tech_pd_planetary_agriworld: "Planetary Superproject: Agriworld"
- tech_pd_planetary_agriworld_desc: "By transforming a planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- tech_pd_planetary_agriworld_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_agriworld$"
+ tech_pd_planetary_agriworld: "Суперпроект: Агромир"
+ tech_pd_planetary_agriworld_desc: "Преобразовав какую-либо планету в агромир, мы сможем организовать сельское хозяйство в промышленных масштабах. Естественная экосистема будет заменена искусственными культурами."
+ tech_pd_planetary_agriworld_tooltip: "§HРешение:§! $decision_pd_aw_agriworld$"
 
 #Stripmine
  #Planet Class
- pc_pd_stripmine: "Stripmine"
- pc_pd_stripmine_desc: "This planet is now an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs. The natural ecosystem has been ruined in the ceaseless quest for resources."
- pc_pd_stripmine_adj: "mining"
- mod_pc_pd_stripmine_habitability: "Stripmine Habitability"
- trait_pc_pd_stripmine_preference: "Stripmine Prefernce"
+ pc_pd_stripmine: "Карьер"
+ pc_pd_stripmine_desc: "Сейчас эта планета покрыта лабиринтами многочисленных карьеров, здесь невероятно много промышленных экскаваторов и буровых установок. Естественная экосистема была уничтожена в бесконечной погоне за ресурсами."
+ pc_pd_stripmine_adj: "добывающий"
+ mod_pc_pd_stripmine_habitability: "Приспособленность к мирам-карьерам"
+ trait_pc_pd_stripmine_preference: "Предпочтение миров-карьеров"
  trait_pc_pd_stripmine_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_stripmine: "Planetary Superproject: Stripmine"
- decision_pd_aw_stripmine_desc: "We could collect resources from every inch of this planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- decision_pd_stripmine_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_mining_plural$§!"
+ decision_pd_aw_stripmine: "Суперпроект: Карьер"
+ decision_pd_aw_stripmine_desc: "Мы можем собрать ресурсы с каждого дюйма коры этой планеты, достаточно только определить фронт работ для бесчисленных экскаваторов и буровых установок. Естественная экосистема этого не переживёт."
+ decision_pd_stripmine_requirements: "£trigger_no£ §RНа планете не должно быть никаких районов, кроме§! §Yдобывающих§!"
 
  #Modifier
- pd_aw_stripmine: "Stripmine"
- pd_aw_stripmine_desc: "This planet is an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs."
+ pd_aw_stripmine: "Карьер"
+ pd_aw_stripmine_desc: "Сейчас эта планета покрыта лабиринтами многочисленных карьеров, здесь невероятно много промышленных экскаваторов и буровых установок."
 
  #Technology
- tech_pd_planetary_stripmine: "Planetary Superproject: Stripmine"
- tech_pd_planetary_stripmine_desc: "We could collect resources from every inch of a planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- tech_pd_planetary_stripmine_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_stripmine$"
+ tech_pd_planetary_stripmine: "Суперпроект: Карьер"
+ tech_pd_planetary_stripmine_desc: "Мы можем собрать ресурсы с каждого дюйма коры какой-либо планеты, достаточно только определить фронт работ для бесчисленных экскаваторов и буровых установок. Естественная экосистема этого не переживёт."
+ tech_pd_planetary_stripmine_tooltip: "§HРешение:§! $decision_pd_aw_stripmine$"
