--- a/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
@@ -77,6 +77,47 @@
  concept_eludium_floating_overseer: "$tech_eludium_floating_overseer$"
  concept_eludium_floating_overseer_desc: "$i_unlocks_building$ ['building:building_pd_eludium_floating_overseer']\n\n§L$tech_eludium_floating_overseer_desc$§!"
 
+###Crystal World
+ sr_acean:0 "Acean Crystal"
+ sr_acean_desc:0 "This crystal's unique resonance promotes remarkable health regeneration in organic lifeforms and accelerates mineral growth."
+ mod_planet_miners_sr_acean_produces_add: "£sr_acean£ $sr_acean$ from £job_miner£ [GetMinerPlural]"
+ pd_crystal: "Crystal World"
+ pd_crystal_desc: "TODO"
+ pc_pd_crystal: "Crystal World"
+ pc_pd_crystal_desc: "TODO"
+ pc_pd_crystal_adj: "crystaline"
+ mod_pc_pd_crystal_habitability: "Crystal Habitability"
+ trait_pc_pd_crystal_preference: "Crystal Preference"
+ trait_pc_pd_crystal_preference_desc: "$trait_pc_arctic_preference_desc$"
+
+ #Events
+ pdcrystal.100.name: "Gem of Life"
+ pdcrystal.100.desc: "A deep scan of §Y[From.GetName]§! revealed something extraordinary: towering crystal formations scattered across the landscape, which we designated §YAcean Crystal§!. These gemstones seem to enhance the health of nearby organic life, and remarkably, their effects persist even in isolated samples.\n\n§Y[Root.GetLeaderName]§! also discovered a decaying alien outpost in the jungle, marking the area as ripe for archaeological investigation."
+ pdcrystal.100.a: "Amazing."
+
+ #Origin
+ pd_origin_init_crystal_NAME:0 "Crystal System"
+ pd_origin_init_crystal_DESC:0 "A starting system containing the Crsytal World"
+ origin_pd_crystal_world:0 "Crystalborn"
+ origin_pd_crystal_world_desc:0 "This civilization emerged on a verdant world dominated by towering crystal pillars formed from the rare Acean Crystal."
+ origin_tooltip_crystal_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_tropical$§! (Size: £planetsize£ 25)$TABBED_NEW_LINE$- ['concept_pd_crystal'] Planet Modifier$TABBED_NEW_LINE$- TODO Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO"
+ concept_pd_crystal: "$pd_crystal$"
+ concept_pd_crystal_desc: "- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G10§!\n- $mod_planet_districts_upkeep_mult$: §R25%§!\n- $mod_planet_buildings_upkeep_mult$: §R25%§!"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  #Techno-Organic Origin #TODO_GATEMAN - Simply ported this over to test
  origin_techno_world:0 "The Children of Unit 04"
  origin_techno_world_desc:0 "origin_techno_world_desc - TODO_GATEMAN"
