--- a/planetary_diversity/localisation/russian/planetarydiversity_vanilla_overwrites_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_vanilla_overwrites_l_russian.yml
@@ -1,4 +1,4 @@
 ﻿l_russian:
 
 #Overwritten Vanilla Loc
- mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ Единство от [GetAdministratorPluralWithIcon]"
