--- a/planetary_diversity_arcologies/localisation/korean/planetarydiversity_more_arcologies_l_korean.yml
+++ b/planetary_diversity_arcologies/localisation/korean/planetarydiversity_more_arcologies_l_korean.yml
@@ -121,7 +121,7 @@
  pc_pd_hive: "Hive Overmind World"
  pc_pd_hive_desc: "This world is a colossal living organism intricately linked to the Hive Mind that created it. It has been sculpted as a bastion of advanced thought processes and is highly defended. Its terrain is poised to assail any unwelcome visitor."
  pc_pd_hive_adj: "$pc_hive_adj$"
- mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability"
+ mod_pc_pd_hive_habitability: "$mod_pc_hive_habitability$"
  trait_pc_pd_hive_preference: "$trait_pc_hive_preference$"
  trait_pc_pd_hive_preference_desc: "$trait_pc_hive_preference_desc$"
  pc_pd_machine: "Machine Nexus World"
@@ -149,7 +149,7 @@
  district_pd_gestalt_administrative_plural: "A synaptic nexus that amplifies the hive's psionic connections, extending its will and guidance across the cosmos."
  district_pd_nexus: "$district_nexus$"
  district_pd_nexus_desc: "$district_nexus_desc$"
- district_pd_nexus_plural: "$district_nexus_plural"
+ district_pd_nexus_plural: "$district_nexus_plural$"
 
  #Modifiers
  pd_hive_military: "Overmind World"
