--- a/planetary_diversity_arcologies/localisation/russian/planetarydiversity_more_arcologies_capital_l_russian.yml
+++ b/planetary_diversity_arcologies/localisation/russian/planetarydiversity_more_arcologies_capital_l_russian.yml
@@ -1,36 +1,36 @@
 ﻿l_russian:
 
 #Senate
- decision_pd_arcology_senate: "Build Senate Dome"
- decision_pd_arcology_senate_desc: "To meet the expanding needs of our nation, we must construct a monumental senate building on our capital, dedicating substantial space to enhance our government's administration capabilities."
- decision_pd_arcology_senate_effects: "Adds the §Y$d_pd_senate_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_senate_building: "Senate Dome"
- d_pd_senate_building_desc: "The Senate Dome, a majestic symbol of governance, stands tall as the administrative heart where our civilization's future is forged."
+ decision_pd_arcology_senate: "Построить Купол Сената"
+ decision_pd_arcology_senate_desc: "Чтобы удовлетворить растущие потребности нашего государства, мы должны построить монументальное здание Сената в нашей столице, выделив значительные площади для расширения административных возможностей нашего правительства."
+ decision_pd_arcology_senate_effects: "Добавляет §Y$d_pd_senate_building$§! в столицу, что займёт часть пространства для районов, но расширит административные возможности государства."
+ d_pd_senate_building: "Купол Сената"
+ d_pd_senate_building_desc: "Купол Сената, величественный символ власти, сердце государства, где формируется будущее нашей цивилизации."
 
 #Palace
- decision_pd_arcology_palace: "Build Palatial Complex"
- decision_pd_arcology_palace_desc: "To reflect the might and authority of our empire, we shall erect a colossal palace within our capital. This grand edifice will embody the power of our leadership and significantly augment our governmental administration."
- decision_pd_arcology_palace_effects: "Adds the §Y$d_pd_palace_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_palace_building: "Palatial Complex"
- d_pd_palace_building_desc: "The Palace Complex, a grand symbol of our sovereignty and ruler's power, dominates the capital. It is the heart of governance, where our empire's destiny is shaped."
+ decision_pd_arcology_palace: "Построить Дворцовый комплекс"
+ decision_pd_arcology_palace_desc: "Чтобы отразить могущество и власть нашей империи, мы возведем колоссальный дворец в нашей столице. Это грандиозное сооружение будет олицетворять могущество нашего правительства и значительно расширит его возможности."
+ decision_pd_arcology_palace_effects: "Добавляет §Y$d_pd_palace_building$§! в столицу, что займёт часть пространства для районов, но расширит административные возможности государства."
+ d_pd_palace_building: "Дворцовый комплекс"
+ d_pd_palace_building_desc: "Дворцовый комплекс, грандиозный символ нашего суверенитета и власти правителя, возвышается над столицей. Это сердце государственной власти, где вершится судьба нашей империи."
 
 #Headquarters
- decision_pd_arcology_headquarters: "Build Planetary Headquarters"
- decision_pd_arcology_headquarters_desc: "To showcase the power and influence of our megacorporation, we will construct a towering headquarters in this economic hub. This imposing structure will represent our leadership's strength and greatly enhance our galatic operations."
- decision_pd_arcology_headquarters_effects: "Adds the §Y$d_pd_headquarters_building$§! to this capital, exhanging potential distrticts to enhance our corporation's administration capabilities."
- d_pd_headquarters_building: "Planetary Headquarters"
- d_pd_headquarters_building_desc: "A monumental symbol of dominanct, this headquarters towers over the planet. It serves as the nerve center for our operations, where the future of our megacorporation is crafted."
+ decision_pd_arcology_headquarters: "Построить Штаб-Квартиру Корпорации"
+ decision_pd_arcology_headquarters_desc: "Чтобы продемонстрировать мощь и влияние нашей мегакорпорации, мы построим в этом экономическом центре возвышающуюся штаб-квартиру. Это внушительное сооружение будет олицетворять силу нашего руководства и значительно поможет нашим галактическим предприятиям."
+ decision_pd_arcology_headquarters_effects: "Добавляет §YШтаб-Квартиру Корпорации§! в столицу, что займёт часть пространства для районов, но расширит административные возможности государства."
+ d_pd_headquarters_building: "Штаб-Квартира Корпорации"
+ d_pd_headquarters_building_desc: "Монументальный символ господства, эта штаб-квартира возвышается над планетой. Она служит мозговым центром наших операций, здесь вершится будущее нашей мегакорпорации."
 
 #Hive Confluence Spire
- decision_pd_hive_confluence_spire: "Build Confluence Spire"
- decision_pd_hive_confluence_spire_desc: "To manifest the supremacy and reach of our collective, we shall grow a mighty confluence spire. This commanding structure will significantly amplify our operations across the stars."
- decision_pd_hive_confluence_spire_effects: "Adds the §Y$d_pd_confluence_spire_building$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_confluence_spire_building: "Confluence Spire"
- d_pd_confluence_spire_building_desc: "This spire stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our path among the stars is intricately woven."
+ decision_pd_hive_confluence_spire: "Построить Шпиль Единства"
+ decision_pd_hive_confluence_spire_desc: "Чтобы продемонстрировать превосходство и размах нашего коллектива, мы вырастим могучий Шпиль Единства. Этот орган управления значительно расширит возможности Разума Улья."
+ decision_pd_hive_confluence_spire_effects: "Добавляет §Y$d_pd_confluence_spire_building$§! в столицу, что займёт часть пространства для районов, но расширит административные возможности Разума Улья."
+ d_pd_confluence_spire_building: "Шпиль Единства"
+ d_pd_confluence_spire_building_desc: "Этот шпиль возвышается над поверхностью планеты, словно мощный маяк. Это центр нашей коллективной воли, где причудливо сплетаются наши пути среди звезд."
 
 #Machine Centralized Processing
- decision_pd_machine_centralized_processing: "Build Centralized Processing Unit"
- decision_pd_machine_centralized_processing_desc: "To assert our superiority and extend operational capacity, we will construct a Centralized Processing Unit. This structure will significantly boost our galactic functions."
- decision_pd_machine_centralized_processing_effects: "Adds the §Y$d_pd_machine_centralized_processing$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_machine_centralized_processing: "Centralized Processing Unit"
- d_pd_machine_centralized_processing_desc: "This processing unit dominates the planetary surface and is the central node for our collective directives, intricately orchestrating our drones."
+ decision_pd_machine_centralized_processing: "Построить Центральный Процессор"
+ decision_pd_machine_centralized_processing_desc: "Чтобы доказать свое превосходство и расширить операционные мощности, мы построим Центральный Процессор. Эта структура значительно расширит наши галактические возможности."
+ decision_pd_machine_centralized_processing_effects: "Добавляет §Y$d_pd_machine_centralized_processing$§! в столицу, что займёт часть пространства для районов, но расширит административные возможности машинного разума."
+ d_pd_machine_centralized_processing: "Центральный Процессор"
+ d_pd_machine_centralized_processing_desc: "Этот процессор возвышается над поверхностью планеты и является центральным узлом для обработки коллективных команд, хитроумно организуя работу дронов."
