--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_l_russian.yml
@@ -1,12 +1,12 @@
 ﻿l_russian:
 
 #Terraforming Warning
- pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures."
+ pd_planet_no_terraform: "$TRIGGER_FAIL$ Эту планету невозможно терраформировать при помощи стандартных технологий."
 
 ###Arcology/Relic
- pc_pd_nuked_arcology: "Nuked Relic World"
- pc_pd_nuked_arcology_desc: "A city once stretched across this entire world. It is experiencing a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation. Minimal signs of life."
- pc_pd_nuked_arcology_tooltip: "Habitability: §R-100%§!\nHabitability: §G+100%§! with §Y$trait_pc_nuked_preference$§! or §Y$trait_survivor$§! trait"
+ pc_pd_nuked_arcology: "Опустошённый реликтовый мир"
+ pc_pd_nuked_arcology_desc: "Когда-то всю эту планету занимал большой город. В настоящее время она переживает ядерную зиму, в атмосфере плотные слои сажистых аэрозолей. Высокий уровень радиации на поверхности. Минимальные признаки жизни."
+ pc_pd_nuked_arcology_tooltip: "Пригодность: §R-100%§!\nПригодность: §G+100%§! для видов с чертой §Y$trait_pc_nuked_preference$§! или §Y$trait_survivor$§!"
 
 ###Dummy Class Warning
- DO_NOT_USE: "DUMMY CLASS - DO NOT USE"
+ DO_NOT_USE: "ЗАГЛУШКА - НЕ ИСПОЛЬЗОВАТЬ"
