--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_planetary_infesters_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_planetary_infesters_l_russian.yml
@@ -2,19 +2,19 @@
 
 ###Planetary Infesters
 #Civic
- civic_hive_pd_planetary_infesters: "Planetary Infesters"
- civic_hive_pd_planetary_infesters_desc: "This hive mind embeds itself into a planet's ecosystems. Each world becomes an extension of itself, flourishing as a unified network under its guidance."
- civic_tooltip_pd_planetary_infesters_effects: "Can build £building£ $building_pd_aw_planet_infester_1$\n- $building_pd_planet_infestor_desc$\n- Homeworld is a $pc_hive$"
+ civic_hive_pd_planetary_infesters: "Заражающий Рой"
+ civic_hive_pd_planetary_infesters_desc: "Этот Разум Роя встраивается в естественную экосистему планеты, каждый мир становится его продолжением, расширяя его и без того большие владения."
+ civic_tooltip_pd_planetary_infesters_effects: "Доступно строительство £building£ §Yузлов заражения§!\n- $building_pd_planet_infestor_desc$\n- Родной мир - $pc_hive$"
 
 #Buildings
- building_pd_planet_infestor_desc: "§YInfesting Nodes§! evolve through three upgrade phases, progressively converting the planet into a §YHive World§!."
- building_pd_aw_planet_infester_1: "Infestation Node - First Phase"
- building_pd_aw_planet_infester_1_desc: "This node, the heart of the initial infestation stage, is vital to the hive's presence on this planet. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_2: "Infestation Node - Second Phase"
- building_pd_aw_planet_infester_2_desc: "This massive node, now in the intermediate infestation stage, wields a connection to the hive robust enough to manipulate critical planetary processes. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_3: "Planetary Infestation Node"
- building_pd_aw_planet_infester_3_desc: "Having reached its zenith, this formidable node exerts total dominion over all planetary processes. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_3_effect_desc: "This planet will be transformed into a §Y$pc_hive$§!."
+ building_pd_planet_infestor_desc: "§YУзлы заражения§! поэтапно проходят три этапа развития, в итоге превращая планету в §YМир-Улей§!."
+ building_pd_aw_planet_infester_1: "Узел заражения - Фаза I"
+ building_pd_aw_planet_infester_1_desc: "Этот узел, сердце начальной стадии заражения, жизненно важен для присутствия Улья на этой планете. Его потеря приведет к ослаблению хватки Роя."
+ building_pd_aw_planet_infester_2: "Узел заражения - Фаза II"
+ building_pd_aw_planet_infester_2_desc: "Этот массивный узел, достигший промежуточной стадии заражения, обладает достаточно прочной связью с Ульем, чтобы управлять важнейшими планетарными процессами. Его потеря приведет к ослаблению хватки Роя."
+ building_pd_aw_planet_infester_3: "Узел заражения - Фаза III"
+ building_pd_aw_planet_infester_3_desc: "Достигнув своего зенита, этот мощный узел полностью контролирует все планетарные процессы. Его потеря приведет к ослаблению хватки Роя."
+ building_pd_aw_planet_infester_3_effect_desc: "Планета будет преобразована в §Y$pc_hive$§!."
 
 #Dummy Class
  pc_hive_dummy: "$pc_hive$"
@@ -25,6 +25,6 @@
  trait_pc_hive_dummy_preference_desc: "$trait_pc_hive_preference_desc$"
 
 #Events
- pdawplanetaryinfesters.120.name: "Planetary Hive Complete"
- pdawplanetaryinfesters.120.desc: "As the node reaches its full potential, we resonate with a profound sense of accomplishment.\n\nThis moment marks a significant leap in the hive's conrol of [Root.GetName], solidifying its grasp over the planet."
- pdawplanetaryinfesters.120.a: "Another home for the hive."
+ pdawplanetaryinfesters.120.name: "Мир-Улей готов"
+ pdawplanetaryinfesters.120.desc: "Очередной узел наконец-то достиг своего полного потенциала, и мы испытываем глубокое удовлетворение.\n\nЭтот момент знаменует собой значительный скачок в контроле Роя над [Root.GetName], укрепляя его власть над планетой."
+ pdawplanetaryinfesters.120.a: "Ещё один дом для Роя."
