--- a/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_wasteland_l_russian.yml
+++ b/planetary_diversity_ascension_worlds/localisation/russian/planetarydiversity_aw_wasteland_l_russian.yml
@@ -2,29 +2,29 @@
 
 ###Wasteland Planets
 #AP
- ap_pd_wasteland_worlds: "Unregulated Industrialism"
- ap_pd_wasteland_worlds_desc: "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
- allow_wasteland_worlds: "§YUnlocks Decision:§! $decision_pd_aw_wasteland_planet$ on non-ideal planets"
- describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§! modifier:\n$t$- Unlocks £district£ §YGenerator Districts§! and §YMining District§!\n$t$- Blocks all §YAgriculture Districts§!\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
+ ap_pd_wasteland_worlds: "Неудержимая промышленность"
+ ap_pd_wasteland_worlds_desc: "Стремясь к безудержной производительности, мы должны отбросить экологические ограничения, чтобы раскрыть истинный промышленный потенциал планеты."
+ allow_wasteland_worlds: "§YОткрывает решение:§! $decision_pd_aw_wasteland_planet$ на неидеальных планетах"
+ describe_wasteland_worlds: "Модификатор §Y$decision_pd_aw_wasteland_planet$§!:\n$t$- £district£ §YЭнергетические§! и §Yдобывающие§! районы более не ограничены\n$t$- Блокирует строительство §Yсельскохозяйственных§! районов\n$t$- Базовая пригодность: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
 
 #Decisions
- decision_pd_aw_wasteland_planet: "Unregulated Industrial Standards"
- decision_pd_aw_wasteland_planet_desc: "Environmental concerns do nothing but hold us back. By ignoring the state of the planet's natural ecosystem, we will unlock the planet's true industrial potential."
- decision_pd_aw_wasteland_planet_effects_short: "§Y$pd_aw_wasteland_planet$§! modifier added.\n\nIncreases §GIndustrial Output§! but reduces £mod_pop_environment_tolerance£ §RHabitability§!."
- decision_pd_aw_wasteland_planet_cleanup: "Environmental Clean Up"
- decision_pd_aw_wasteland_planet_cleanup_desc: "The severe environmental degradation on this planet has left its ecosystem in a precarious state. We will rectify the damage inflicted upon this world."
- decision_pd_aw_wasteland_planet_cleanup_tooltip: "We will restore this planet's original ecosystem."
+ decision_pd_aw_wasteland_planet: "Нерегулируемые промышленные стандарты"
+ decision_pd_aw_wasteland_planet_desc: "Забота об окружающей среде только сдерживает нас. Игнорируя состояние естественной экосистемы планеты, мы раскроем ее истинный промышленный потенциал."
+ decision_pd_aw_wasteland_planet_effects_short: "Добавляет модификатор §Y$pd_aw_wasteland_planet$§!.\n\nУвеличивает §Gпроизводительность§! промышленности, но уменьшает £mod_pop_environment_tolerance£ §Rпригодность§! планеты."
+ decision_pd_aw_wasteland_planet_cleanup: "Восстановление экосистемы"
+ decision_pd_aw_wasteland_planet_cleanup_desc: "Из-за серьезного ухудшения экологической обстановки на нашей планете ее экосистема находится в плачевном состоянии. Мы исправим ущерб, нанесенный этому миру."
+ decision_pd_aw_wasteland_planet_cleanup_tooltip: "Мы восстановим прежнюю экосистему планеты."
 
 #Modifiers
- pd_aw_wasteland_planet: "Industrial Wasteland"
+ pd_aw_wasteland_planet: "Промышленная пустошь"
  pd_aw_wasteland_planet_desc: "$decision_pd_aw_wasteland_planet_desc$"
- pd_aw_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
- pd_wasteland_planet: "Industrial Wasteland"
+ pd_aw_wasteland_planet_tooltip: "Строительство £district£ §Yэнергетических§! и §Yдобывающих§! районов более не ограничено\nВозведение §Yсельскохозяйственных§! районов заблокировано"
+ pd_wasteland_planet: "Промышленная пустошь"
  pd_wasteland_planet_desc: "$pd_aw_wasteland_planet_desc$"
- pd_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
+ pd_wasteland_planet_tooltip: "Строительство £district£ §Yэнергетических§! и §Yдобывающих§! районов более не ограничено\nВозведение §Yсельскохозяйственных§! районов заблокировано"
 
 #Notification Message
- MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ now has §Y$decision_pd_aw_wasteland_planet$§!"
- MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Environmental Regulations Abolished"
- MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "The ecosystem on $PLANET|Y$ has been repaired."
- MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Environmental Regulations Returned"
+ MESSAGE_PD_AW_WASTELAND_DESC:1 "На планете $PLANET|Y$ теперь действуют §Y$decision_pd_aw_wasteland_planet$§!"
+ MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Экологические нормы отменены"
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "Экосистема планеты $PLANET|Y$ восстановлена."
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Экологические нормы возвращены"
