--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
@@ -1,10 +1,10 @@
 ﻿l_simp_chinese:
  pc_pd_necro: "$DO_NOT_USE$"
- pc_pd_necro_desc: "$DO_NOT_USE"
- pc_pd_necro_adj: "$DO_NOT_USE"
- mod_pc_pd_necro_habitability: "$DO_NOT_USE"
- trait_pc_pd_necro_preference: "$DO_NOT_USE"
- trait_pc_pd_necro_preference_desc: "$DO_NOT_USE"
+ pc_pd_necro_desc: "$DO_NOT_USE$"
+ pc_pd_necro_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_preference: "$DO_NOT_USE$"
+ trait_pc_pd_necro_preference_desc: "$DO_NOT_USE$"
  pc_pd_necro_city: "$DO_NOT_USE$"
  pc_pd_necro_city_desc: "$DO_NOT_USE$"
  pc_pd_necro_city_adj: "$DO_NOT_USE$"
